external-multi-cluster-gateway/v1alpha2/x-mc-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: external-multi-cluster-gateway
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        options:
          networking.gke.io/pre-shared-certs: x-mc-gw-cert
  addresses:
    - type: NamedAddress
      value: x-mc-gw-ip
