external-multi-cluster-gateway/v1alpha2/x-mc-gw-httproute-hbr.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: external-multi-cluster-httproute-hbr
spec:
  parentRefs:
    - name: external-multi-cluster-gateway
  hostnames:
    - "x-mc-gw.gcpx.org"
  rules:
    - matches:
        - headers:
            - type: Exact
              name: target
              value: tyo1
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: tyo1-whereami
          port: 8080
    - matches:
        - headers:
            - type: Exact
              name: target
              value: tyo2
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: tyo2-whereami
          port: 8080
    - matches:
        - headers:
            - type: Exact
              name: target
              value: osa1
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: osa1-whereami
          port: 8080
